--- a/yuna/pages/brandwork2.html
+++ b/yuna/pages/brandwork2.html
@@ -19,17 +19,36 @@
         <!-- java script -->
       </section>
       <div class="brandwork__pageButton">
-        <button class="brandwork__pageButton-first">1</button>
-        <button class="brandwork__pageButton-second">2</button>
+        <a
+          class="brandwork__pageButton-first"
+          href="../../yuna/pages/brandwork.html"
+        >
+          1
+        </a>
+        <a
+          class="brandwork__pageButton-second"
+          href="../../yuna/pages/brandwork2.html"
+          >2</a
+        >
       </div>
       <div class="brandwork__mobileButton">
-        <i class="ri-arrow-left-s-line"></i>
+        <a
+          href="../../yuna/pages/brandwork.html"
+          class="brandwork__mobileButton-left"
+        >
+          <i class="ri-arrow-left-s-line"></i>
+        </a>
         <div class="brandwork__mobileButton-number">
           <p class="brandwork__mobileButton-first">2</p>
           <p class="brandwork__mobileButton-second">/</p>
           <p class="brandwork__mobileButton-third">2</p>
         </div>
-        <i class="ri-arrow-right-s-line"></i>
+        <a
+          href="../../yuna/pages/brandwork2.html"
+          class="brandwork__mobileButton-right"
+        >
+          <i class="ri-arrow-right-s-line"></i>
+        </a>
       </div>
     </div>
   </body>
