--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -16,12 +16,12 @@
     <div class="event">
       <h2 class="event__title">EVENT</h2>
       <div class="event__buttons">
-        <button class="event__button event__buttons-active">
+        <a href="../../yuna/pages/event_active.html" class="event__button event__buttons-active">
             진행중 이벤트
-        </button>
-        <button class="event__button event__buttons-ended">
+        </a>
+        <a href="../../yuna/pages/event_ended.html" class="event__button event__buttons-ended">
             종료된 이벤트
-        </button>
+        </a>
       </div>
       <section class="event__section">
         <!-- java script -->
@@ -32,9 +32,9 @@
       <div class="event_mobileButton">
         <i class="ri-arrow-left-s-line"></i>
         <div class="event_mobileButton-number">
-          <p class="event_mobileButton-first">1</p>
-          <p class="event_mobileButton-second">/</p>
-          <p class="event_mobileButton-third">1</p>
+          <span class="event_mobileButton-first">1</span>
+          <span class="event_mobileButton-second">/</span>
+          <span class="event_mobileButton-third">1</span>
         </div>
         <i class="ri-arrow-right-s-line"></i>
       </div>
