--- a/yuna/pages/event_ended.html
+++ b/yuna/pages/event_ended.html
@@ -4,42 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Torriden</title>
-        <link
+    <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../reset.css">
-    <link rel="stylesheet" href="../css/event_ended.css">
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../css/event_ended.css" />
     <script src="../javascript/event_ended.js" defer></script>
   </head>
   <body>
     <div class="event">
       <h2 class="event__title">EVENT</h2>
       <div class="event__buttons">
-        <button class="event__button event__buttons-active">
-            진행중 이벤트
-        </button>
-        <button class="event__button event__buttons-ended">
-            종료된 이벤트
-        </button>
+        <a
+          href="../../yuna/pages/event_active.html"
+          class="event__button event__buttons-active"
+        >
+          진행중 이벤트
+        </a>
+        <a
+          href="../../yuna/pages/event_ended.html"
+          class="event__button event__buttons-ended"
+        >
+          종료된 이벤트
+        </a>
       </div>
       <section class="event__section">
         <!-- java script -->
-
       </section>
       <div class="event__pageButtons">
-        <button class="event__pageButton event__pageButton-first">1</button>
-        <button class="event__pageButton event__pageButton-second">2</button>
-        <button class="event__pageButton event__pageButton-third">3</button>
-      </div> 
-      <div class="event_mobileButton">
-        <i class="ri-arrow-left-s-line"></i>
-        <div class="event_mobileButton-number">
-          <p class="event_mobileButton-first">1</p>
-          <p class="event_mobileButton-second">/</p>
-          <p class="event_mobileButton-third">3</p>
-        </div>
-        <i class="ri-arrow-right-s-line"></i>
+        <a
+          href="../../yuna/pages/event_ended.html"
+          class="event__pageButton event__pageButton-first"
+          >1</a
+        >
+        <a
+          href="../../yuna/pages/event_ended2.html"
+          class="event__pageButton event__pageButton-second"
+          >2</a
+        >
+        <a
+          href="../../yuna/pages/event_ended3.html"
+          class="event__pageButton event__pageButton-third"
+          >3</a
+        >
       </div>
+      <div class="event_mobileButton">
+        <a
+          href="../../yuna/pages/event_ended.html"
+          class="event_mobileButton-left"
+        >
+          <i class="ri-arrow-left-s-line"></i>
+        </a>
+        <div class="event_mobileButton-number">
+          <span class="event_mobileButton-first">1</span>
+          <span class="event_mobileButton-second">/</span>
+          <span class="event_mobileButton-third">3</span>
+        </div>
+        <a
+          href="../../yuna/pages/event_ended2.html"
+          class="event_mobileButton-left"
+        >
+          <i class="ri-arrow-right-s-line"></i>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
