--- a/yuna/pages/event_ended3.html
+++ b/yuna/pages/event_ended3.html
@@ -27,18 +27,40 @@
         <!-- java script -->
       </section>
       <div class="event__pageButtons">
-        <button class="event__pageButton event__pageButton-first">1</button>
-        <button class="event__pageButton event__pageButton-second">2</button>
-        <button class="event__pageButton event__pageButton-third">3</button>
+        <a
+          href="../../yuna/pages/event_ended.html"
+          class="event__pageButton event__pageButton-first"
+          >1</a
+        >
+        <a
+          href="../../yuna/pages/event_ended2.html"
+          class="event__pageButton event__pageButton-second"
+          >2</a
+        >
+        <a
+          href="../../yuna/pages/event_ended3.html"
+          class="event__pageButton event__pageButton-third"
+          >3</a
+        >
       </div>
       <div class="event_mobileButton">
-        <i class="ri-arrow-left-s-line"></i>
+        <a
+          href="../../yuna/pages/event_ended2.html"
+          class="event_mobileButton-left"
+        >
+          <i class="ri-arrow-left-s-line"></i>
+        </a>
         <div class="event_mobileButton-number">
-          <p class="event_mobileButton-first">3</p>
-          <p class="event_mobileButton-second">/</p>
-          <p class="event_mobileButton-third">3</p>
+          <span class="event_mobileButton-first">3</span>
+          <span class="event_mobileButton-second">/</span>
+          <span class="event_mobileButton-third">3</span>
         </div>
-        <i class="ri-arrow-right-s-line"></i>
+        <a
+          href="../../yuna/pages/event_ended3.html"
+          class="event_mobileButton-left"
+        >
+          <i class="ri-arrow-right-s-line"></i>
+        </a>
       </div>
     </div>
   </body>
