--- a/yuna/pages/news3.html
+++ b/yuna/pages/news3.html
@@ -33,9 +33,21 @@
         </table>
         <!-- 페이지 버튼(Web) -->
         <div class="news__pageButtons">
-          <button class="news__pageButton news__pageButton-first">1</button>
-          <button class="news__pageButton news__pageButton-second">2</button>
-          <button class="news__pageButton news__pageButton-third">3</button>
+          <a
+            href="../../yuna/pages/news.html"
+            class="news__pageButton news__pageButton-first"
+            >1</a
+          >
+          <a
+            href="../../yuna/pages/news2.html"
+            class="news__pageButton news__pageButton-second"
+            >2</a
+          >
+          <a
+            href="../../yuna/pages/news3.html"
+            class="news__pageButton news__pageButton-third"
+            >3</a
+          >
         </div>
       </section>
       <!-- 모바일 버전 -->
@@ -45,13 +57,17 @@
 
       <!-- 페이지 버튼(Mobile) -->
       <div class="news_mobileButton">
-        <div class="left">이전</div>
+        <a href="../../yuna/pages/news2.html" class="news_mobileButton-left">
+          이전
+        </a>
         <div class="news_mobileButton-number">
-          <p class="news_mobileButton-first">3</p>
-          <p class="news_mobileButton-second">/</p>
-          <p class="news_mobileButton-third">3</p>
+          <span class="news_mobileButton-first">3</span>
+          <span class="news_mobileButton-second">/</span>
+          <span class="news_mobileButton-third">3</span>
         </div>
-        <div class="right">이후</div>
+        <a href="../../yuna/pages/news3.html" class="news_mobileButton-right">
+          이후
+        </a>
       </div>
     </div>
   </body>
