--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -15,20 +15,34 @@
   <body>
     <div class="event">
       <h2 class="event__title">EVENT</h2>
+
+      <!-- 이벤트 종류 버튼 -->
       <div class="event__buttons">
-        <a href="../../yuna/pages/event_active.html" class="event__button event__buttons-active">
-            진행중 이벤트
+        <a
+          href="../../yuna/pages/event_active.html"
+          class="event__button event__buttons-active"
+        >
+          진행중 이벤트
         </a>
-        <a href="../../yuna/pages/event_ended.html" class="event__button event__buttons-ended">
-            종료된 이벤트
+        <a
+          href="../../yuna/pages/event_ended.html"
+          class="event__button event__buttons-ended"
+        >
+          종료된 이벤트
         </a>
       </div>
+
+      <!-- CONTENTS 내용 -->
       <section class="event__section">
         <!-- java script -->
       </section>
+
+      <!-- 페이지 이동 버튼 (Web) -->
       <div class="event__pageButton">
         <button class="event__pageButton-first">1</button>
       </div>
+
+      <!-- 페이지 이동 버튼 (mobile) -->
       <div class="event_mobileButton">
         <i class="ri-arrow-left-s-line"></i>
         <div class="event_mobileButton-number">
@@ -38,5 +52,6 @@
         </div>
         <i class="ri-arrow-right-s-line"></i>
       </div>
+    </div>
   </body>
 </html>
