--- a/yuna/pages/brandwork2.html
+++ b/yuna/pages/brandwork2.html
@@ -15,9 +15,13 @@
   <body>
     <div class="brandwork">
       <h2 class="brandwork__title">브랜드 캠페인</h2>
+
+      <!-- CONTENTS 내용 -->
       <section class="brandwork__section">
         <!-- java script -->
       </section>
+
+      <!-- 페이지 이동 버튼 (Web) -->
       <div class="brandwork__pageButton">
         <a
           class="brandwork__pageButton-first"
@@ -31,6 +35,8 @@
           >2</a
         >
       </div>
+
+      <!-- 페이지 이동 버튼 (mobile) -->
       <div class="brandwork__mobileButton">
         <a
           href="../../yuna/pages/brandwork.html"
