--- a/yuna/pages/event_ended3.html
+++ b/yuna/pages/event_ended3.html
@@ -15,6 +15,8 @@
   <body>
     <div class="event">
       <h2 class="event__title">EVENT</h2>
+
+      <!-- 이벤트 종류 버튼 -->
       <div class="event__buttons">
         <button class="event__button event__buttons-active">
           진행중 이벤트
@@ -23,9 +25,13 @@
           종료된 이벤트
         </button>
       </div>
+
+      <!-- CONTENTS 내용 -->
       <section class="event__section">
         <!-- java script -->
       </section>
+
+      <!-- 페이지 이동 버튼 (Web) -->
       <div class="event__pageButtons">
         <a
           href="../../yuna/pages/event_ended.html"
@@ -43,6 +49,8 @@
           >3</a
         >
       </div>
+
+      <!-- 페이지 이동 버튼 (mobile) -->
       <div class="event_mobileButton">
         <a
           href="../../yuna/pages/event_ended2.html"
