--- a/yuna/pages/news.html
+++ b/yuna/pages/news.html
@@ -11,6 +11,7 @@
   <body>
     <div class="news">
       <h2 class="news__title">공지사항</h2>
+
       <!-- 웹 버전 -->
       <section class="news__section">
         <table class="news__table">
@@ -25,13 +26,8 @@
           </thead>
           <tbody class="news__table_tbody">
             <!-- java script -->
-            <!-- <tr class="news__table_row">
-              <td class="news__table_num">1</td>
-              <td class="news__table_title">제목</td>
-              <td class="news__table_date">2025.09.30</td>
-              <td class="news__table_writer">관리자</td>
-              <td class="news__table_view">15</td>
-            </tr> -->
+
+            <!-- CONTENTS 내용 -->
           </tbody>
         </table>
         <!-- 페이지 버튼(Web) -->
@@ -56,17 +52,8 @@
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
         <!-- java script -->
-        <!-- <article class="news__mobile_contens">
-          <h3 class="news__mobile_contents_title">제목</h3>
-          <div class="news__mobile_contents_w_date">
-            <p class="news__mobile_contents_writer">관리자</p>
-            <p class="news__mobile_contents_date">2025.09.30</p>
-          </div>
-          <div class="news__mobile_contents_r_view">
-            <span class="news__mobile_contents_recommend"> 추천수0 </span>
-            <span class="news__mobile_contents_view"> 조회수</span>
-          </div>
-        </article> -->
+
+        <!-- CONTENTS 내용 -->
       </section>
 
       <!-- 페이지 버튼(Mobile) -->
