--- a/yuna/pages/news2.html
+++ b/yuna/pages/news2.html
@@ -11,6 +11,7 @@
   <body>
     <div class="news">
       <h2 class="news__title">공지사항</h2>
+
       <!-- 웹 버전 -->
       <section class="news__section">
         <table class="news__table">
@@ -25,6 +26,8 @@
           </thead>
           <tbody class="news__table_tbody">
             <!-- java script -->
+
+            <!-- CONTENTS 내용 -->
           </tbody>
         </table>
         <!-- 페이지 버튼(Web) -->
@@ -50,7 +53,10 @@
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
         <!-- java script -->
+
+        <!-- CONTENTS 내용 -->
       </section>
+
       <!-- 페이지 버튼(Mobile) -->
       <div class="news_mobileButton">
         <a href="../../yuna/pages/news.html" class="news_mobileButton-left">
