--- a/yuna/pages/news3.html
+++ b/yuna/pages/news3.html
@@ -15,6 +15,7 @@
   <body>
     <div class="news">
       <h2 class="news__title">공지사항</h2>
+
       <!-- 웹 버전 -->
       <section class="news__section">
         <table class="news__table">
@@ -29,6 +30,8 @@
           </thead>
           <tbody class="news__table_tbody">
             <!-- java script -->
+
+            <!-- CONTENTS 내용 -->
           </tbody>
         </table>
         <!-- 페이지 버튼(Web) -->
@@ -53,6 +56,8 @@
       <!-- 모바일 버전 -->
       <section class="news__mobile_section">
         <!-- java script -->
+
+        <!-- CONTENTS 내용 -->
       </section>
 
       <!-- 페이지 버튼(Mobile) -->
