Feat: brandwork, event, news 페이지 헤더와 푸터 라우팅 완료

--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -8,12 +8,14 @@
         </a>
         <ul class="nav_menu">
             <li><a href="/Torriden/taejin/pages/about.html">ABOUT</a></li>
-            <li>BRAND WORK</li>
+            <li>
+                <a href="/Torriden/yuna/pages/brandwork.html">BRAND WORK</a>
+            </li>
             <li class="nav_menu_shop">
                 <a href="/Torriden/youngson/pages/shop1.html">SHOP</a>
             </li>
-            <li>NEWS</li>
-            <li>EVENT</li>
+            <li><a href="/Torriden/yuna/pages/news.html">NEWS</a></li>
+            <li><a href="/Torriden/yuna/pages/event_active.html">EVENT</a></li>
             <li>
                 <a href="/Torriden/youngson/pages/community.html">COMMUNITY</a>
             </li>
