--- a/yuna/pages/brandwork.html
+++ b/yuna/pages/brandwork.html
@@ -1,61 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Torriden</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../css/brandwork.css" />
-    <script src="../javascript/brandwork.js" defer></script>
-  </head>
-  <body>
-    <div class="brandwork">
-      <h2 class="brandwork__title">브랜드 캠페인</h2>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Torriden</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../../reset.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../../taejin/css/header.css" />
+        <link rel="stylesheet" href="../../taejin/css/footer.css" />
+        <link rel="stylesheet" href="../css/brandwork.css" />
 
-      <!-- CONTENTS 내용 -->
-      <section class="brandwork__section">
-        <!-- java script -->
-      </section>
+        <script type="module" src="../../include.js" defer></script>
+        <script src="../javascript/brandwork.js" defer></script>
+    </head>
+    <body>
+        <!-- 공통 header -->
+        <div id="header"></div>
 
-      <!-- 페이지 이동 버튼 (Web) -->
-      <div class="brandwork__pageButton">
-        <a
-          class="brandwork__pageButton-first"
-          href="../../yuna/pages/brandwork.html"
-        >
-          1
-        </a>
-        <a
-          class="brandwork__pageButton-second"
-          href="../../yuna/pages/brandwork2.html"
-          >2</a
-        >
-      </div>
+        <div class="brandwork">
+            <h2 class="brandwork__title">브랜드 캠페인</h2>
 
-      <!-- 페이지 이동 버튼 (mobile) -->
-      <div class="brandwork__mobileButton">
-        <a
-          href="../../yuna/pages/brandwork.html"
-          class="brandwork__mobileButton-left"
-        >
-          <i class="ri-arrow-left-s-line"></i>
-        </a>
-        <div class="brandwork__mobileButton-number">
-          <p class="brandwork__mobileButton-first">1</p>
-          <p class="brandwork__mobileButton-second">/</p>
-          <p class="brandwork__mobileButton-third">2</p>
+            <!-- CONTENTS 내용 -->
+            <section class="brandwork__section">
+                <!-- java script -->
+            </section>
+
+            <!-- 페이지 이동 버튼 (Web) -->
+            <div class="brandwork__pageButton">
+                <a
+                    class="brandwork__pageButton-first"
+                    href="../../yuna/pages/brandwork.html"
+                >
+                    1
+                </a>
+                <a
+                    class="brandwork__pageButton-second"
+                    href="../../yuna/pages/brandwork2.html"
+                    >2</a
+                >
+            </div>
+
+            <!-- 페이지 이동 버튼 (mobile) -->
+            <div class="brandwork__mobileButton">
+                <a
+                    href="../../yuna/pages/brandwork.html"
+                    class="brandwork__mobileButton-left"
+                >
+                    <i class="ri-arrow-left-s-line"></i>
+                </a>
+                <div class="brandwork__mobileButton-number">
+                    <p class="brandwork__mobileButton-first">1</p>
+                    <p class="brandwork__mobileButton-second">/</p>
+                    <p class="brandwork__mobileButton-third">2</p>
+                </div>
+                <a
+                    href="../../yuna/pages/brandwork2.html"
+                    class="brandwork__mobileButton-right"
+                >
+                    <i class="ri-arrow-right-s-line"></i>
+                </a>
+            </div>
         </div>
-        <a
-          href="../../yuna/pages/brandwork2.html"
-          class="brandwork__mobileButton-right"
-        >
-          <i class="ri-arrow-right-s-line"></i>
-        </a>
-      </div>
-    </div>
-  </body>
+
+        <!-- 공통 footer -->
+        <div id="footer"></div>
+    </body>
 </html>
