--- a/yuna/pages/event_ended3.html
+++ b/yuna/pages/event_ended3.html
@@ -9,10 +9,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../reset.css" />
+    <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../../taejin/css/header.css" />
+        <link rel="stylesheet" href="../../taejin/css/footer.css" />
     <link rel="stylesheet" href="../css/event_ended3.css" />
+
+    <script type="module" src="../../include.js" defer></script>
     <script src="../javascript/event_ended3.js" defer></script>
   </head>
   <body>
+    <!-- 공통 header -->
+        <div id="header"></div>
+
     <div class="event">
       <h2 class="event__title">EVENT</h2>
 
@@ -71,5 +82,8 @@
         </a>
       </div>
     </div>
+
+    <!-- 공통 footer -->
+        <div id="footer"></div>
   </body>
 </html>
