--- a/yuna/pages/event_active.html
+++ b/yuna/pages/event_active.html
@@ -1,57 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Torriden</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../../reset.css" />
-    <link rel="stylesheet" href="../css/event_active.css" />
-    <script src="../javascript/event_active.js" defer></script>
-  </head>
-  <body>
-    <div class="event">
-      <h2 class="event__title">EVENT</h2>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Torriden</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../../reset.css" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="../../taejin/css/header.css" />
+        <link rel="stylesheet" href="../../taejin/css/footer.css" />
+        <link rel="stylesheet" href="../css/event_active.css" />
 
-      <!-- 이벤트 종류 버튼 -->
-      <div class="event__buttons">
-        <a
-          href="../../yuna/pages/event_active.html"
-          class="event__button event__buttons-active"
-        >
-          진행중 이벤트
-        </a>
-        <a
-          href="../../yuna/pages/event_ended.html"
-          class="event__button event__buttons-ended"
-        >
-          종료된 이벤트
-        </a>
-      </div>
+        <script type="module" src="../../include.js" defer></script>
+        <script src="../javascript/event_active.js" defer></script>
+    </head>
+    <body>
+        <!-- 공통 header -->
+        <div id="header"></div>
 
-      <!-- CONTENTS 내용 -->
-      <section class="event__section">
-        <!-- java script -->
-      </section>
+        <div class="event">
+            <h2 class="event__title">EVENT</h2>
 
-      <!-- 페이지 이동 버튼 (Web) -->
-      <div class="event__pageButton">
-        <button class="event__pageButton-first">1</button>
-      </div>
+            <!-- 이벤트 종류 버튼 -->
+            <div class="event__buttons">
+                <a
+                    href="../../yuna/pages/event_active.html"
+                    class="event__button event__buttons-active"
+                >
+                    진행중 이벤트
+                </a>
+                <a
+                    href="../../yuna/pages/event_ended.html"
+                    class="event__button event__buttons-ended"
+                >
+                    종료된 이벤트
+                </a>
+            </div>
 
-      <!-- 페이지 이동 버튼 (mobile) -->
-      <div class="event_mobileButton">
-        <i class="ri-arrow-left-s-line"></i>
-        <div class="event_mobileButton-number">
-          <span class="event_mobileButton-first">1</span>
-          <span class="event_mobileButton-second">/</span>
-          <span class="event_mobileButton-third">1</span>
+            <!-- CONTENTS 내용 -->
+            <section class="event__section">
+                <!-- java script -->
+            </section>
+
+            <!-- 페이지 이동 버튼 (Web) -->
+            <div class="event__pageButton">
+                <button class="event__pageButton-first">1</button>
+            </div>
+
+            <!-- 페이지 이동 버튼 (mobile) -->
+            <div class="event_mobileButton">
+                <i class="ri-arrow-left-s-line"></i>
+                <div class="event_mobileButton-number">
+                    <span class="event_mobileButton-first">1</span>
+                    <span class="event_mobileButton-second">/</span>
+                    <span class="event_mobileButton-third">1</span>
+                </div>
+                <i class="ri-arrow-right-s-line"></i>
+            </div>
         </div>
-        <i class="ri-arrow-right-s-line"></i>
-      </div>
-    </div>
-  </body>
+
+        <!-- 공통 footer -->
+        <div id="footer"></div>
+    </body>
 </html>
