--- a/taejin/pages/header.html
+++ b/taejin/pages/header.html
@@ -1,23 +1,23 @@
 <header>
     <nav>
-        <a href="/Torriden/index.html">
+        <a href="../../index.html">
             <img
                 src="https://torridtr9977.cdn-nhncommerce.com/data/skin/front/moment_C/img/banner/87091f70b00a68e2c0ae40eebd944819_11423.svg"
                 alt="Torriden Logo"
             />
         </a>
         <ul class="nav_menu">
-            <li><a href="/Torriden/taejin/pages/about.html">ABOUT</a></li>
+            <li><a href="../../taejin/pages/about.html">ABOUT</a></li>
             <li>
-                <a href="/Torriden/yuna/pages/brandwork.html">BRAND WORK</a>
+                <a href="../../yuna/pages/brandwork.html">BRAND WORK</a>
             </li>
             <li class="nav_menu_shop">
-                <a href="/Torriden/youngson/pages/shop1.html">SHOP</a>
+                <a href="../../youngson/pages/shop1.html">SHOP</a>
             </li>
-            <li><a href="/Torriden/yuna/pages/news.html">NEWS</a></li>
-            <li><a href="/Torriden/yuna/pages/event_active.html">EVENT</a></li>
+            <li><a href="../../yuna/pages/news.html">NEWS</a></li>
+            <li><a href="../../yuna/pages/event_active.html">EVENT</a></li>
             <li>
-                <a href="/Torriden/youngson/pages/community.html">COMMUNITY</a>
+                <a href="../../youngson/pages/community.html">COMMUNITY</a>
             </li>
         </ul>
         <ul class="nav_icon">
